<resources>

    <string name="app_name">Popular Movies</string>
    <string name="poster">poster</string>
    <string name="overview">Overview</string>
    <string name="check_internet">Cannot connect to database. Check your internet connection.</string>
    <string name="background_image">background_image</string>
    <string name="connecting">Connecting To Database. \n One Moment…</string>
    <string name="poster_in_grid">ImageView for poster within Discover Grid</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="retry">Retry</string>
    <string name="user_rating">User Rating:</string>
    <string name="sort_by">Sort By</string>
    <string name="discover_loading_icon">discover loading icon</string>
    <string name="reviews">Reviews:</string>
    <string name="trailers">Trailers:</string>
    <string name="video_thumbnail">video thumbnail</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_icon_cd">favorites icon</string>
    <string name="favorites_add_error">Error adding movie to favorites database.</string>
    <string name="favorites_add_success">Successfully added movie to favorites database.</string>
    <string name="popular_movies_title">POPULAR MOVIES</string>
    <string name="top_twenty">Top Twenty</string>
    <string name="top_rated_title">TOP RATED</string>
    <string name="favorites_title">Your Favorites</string>
    <string name="show_more">SHOW MORE</string>
    <string name="show_less">SHOW LESS</string>
</resources>
