<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fadedText"
        android:clipToPadding="true">
        <!--<include layout="@layout/toolbar_layout"-->
            <!--android:id="@+id/toolbar_layout" />-->

        <ImageView
            android:id="@+id/discover_loading_icon"
            android:layout_width="102dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/discover_loading_icon"
            android:src="@drawable/progress_animation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/connecting"
            android:textColor="@color/brightText"
            android:textSize="@dimen/connecting_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/discover_loading_icon" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movie_posters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layoutAnimation="@anim/layout_animation_fall_down"
            android:outlineProvider="bounds"
            android:nestedScrollingEnabled="false"
            android:visibility="visible" />
        <Utilities.DiscoverRecyclerHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycler_view_header">
            <include layout="@layout/discover_recyclerview_header" />
        </Utilities.DiscoverRecyclerHeader>
        <Button
            android:id="@+id/retry_fetch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:visibility="invisible"
            android:background="#25ffffff"
            android:onClick="refresh"
            android:text="@string/retry"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_loading"/>

    </android.support.constraint.ConstraintLayout>
</RelativeLayout>